feat: support local test; square schemas; support sqlite and bigcache
